🔦👦 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   <body>
     <header class="header">
     <h1>
-      OpenLayers PWA
+      OpenLayers location PWA
       <a href="https://glitch.com/@enigmatic7earth" class="powered-by">
         Prashant@glitch
       </a>
