--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="OpenLayers PWA">
   <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
+    
+  <link rel="icon" href="https://cdn.glitch.com/a58f89f7-1db2-4974-bb9c-f4939691aa2f%2Ffavicon.ico?v=1562667063534" type="image/x-icon" />
   <!-- description -->
   <meta name="description" content="Sample OpenLayers PWapp">
   <!-- meta theme-color -->
